minor changes to question text

--- a/New folder/index.html
+++ b/New folder/index.html
@@ -49,7 +49,7 @@
                 220.85. In this case, multifamily dwelling, which is Section 220.84.</p>
               <p class="mx-4">The solution to this problem involves 6 steps:</p>
               <p class="mx-4">1. Total all the General Lighting Loads<br>2. Total all the
-                Small Appliance &amp; Laundry Loads<br>3. Total all the Fixed Appliance
+                Small Appliance and Laundry Loads<br>3. Total all the Fixed Appliance
                 Loads<br>4. Total of the Larger of Heating or A/C Loads<br>5. Apply the
                 demand factor<br>6. Calculate the service size.</p>
             </div>
@@ -62,15 +62,14 @@
               <p class="mx-sm-2">Total all apartments:</p>
               <p class="m-calc mx-2 px-3 py-1">4,920 VA × 12 units = 59,040 VA</p>
               <br>
-              <div class="q-note">
-                <div class="mx-2"> </div>
+              <div class="q-note mx-2">                
                 <p class="p-2"><strong>Note:</strong> This includes all receptacle loads
                   in a dwelling unit, except for the small appliance loads from Section
                   220.84(C)(2).</p>
               </div>
             </div>
             <div class="mx-3 my-2 p-2">
-              <h4>Step 2 – Small Appliance &amp; Laundry Loads.</h4>
+              <h4>Step 2 – Small Appliance and Laundry Loads.</h4>
               <p>Section 220.82(B)(1) requires a minimum of 1500 volt-amperes for each
                 2-wire, 20-ampere small appliance circuit, and each laundry circuit
                 specified in Section 220.52.</p>
@@ -78,7 +77,7 @@
                 <table class="mx-auto" width="100%">
                   <tbody>
                     <tr>
-                      <th class="text-left" colspan="5">Small Appliance &amp; Laundry
+                      <th class="text-left" colspan="5">Small Appliance and Laundry
                         Loads</th>
                     </tr>
                     <tr>
@@ -162,8 +161,7 @@
                 </table>
               </div>
               <br>
-              <div class="q-note mx-auto">
-                <div class="m-2"> </div>
+              <div class="q-note mx-2">                
                 <p class="p-2"><strong>Note:</strong> The dryer must be calculated using
                   its nameplate rating according to Section 220.84(C)(3).</p>
               </div>
@@ -231,8 +229,5 @@
               <p class="mx-sm-2">This is rounded to 859 A per Section 220.5(B).</p>
             </div>         
     </div>
-
-
 </body>
-
 </html>
