Updated Table Structure and Styles

--- a/New folder/index.html
+++ b/New folder/index.html
@@ -100,7 +100,7 @@
                       <td class="text-right">18,000</td>
                       <td class="text-center">VA</td>
                     </tr>
-                    <tr style="border-top: 2px solid black;">
+                    <tr class="last">
                       <td class="text-left" colspan="5">Total Load</td>
                       <td class="text-center">=</td>
                       <td class="text-right">54,000</td>
@@ -119,43 +119,36 @@
                 <table class="mx-auto" width="98%">
                   <tbody>
                     <tr>
-                      <th class="text-left" colspan="5">Fixed Appliance Loads</th>
+                      <th class="text-left" colspan="4">Fixed Appliance Loads</th>
                     </tr>
                     <tr>
                       <td>Range</td>
-                      <td class="text-right">12,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">12,000&nbsp;VA</td>
                       <td class="text-center">×</td>
                       <td class="text-center">12</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">144,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">144,000&nbsp;VA</td>
                     </tr>
                     <tr>
                       <td>Water Heater</td>
-                      <td class="text-right">5,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">5,000&nbsp;VA</td>
                       <td class="text-center">×</td>
                       <td class="text-center">12</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">60,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">60,000&nbsp;VA</td>
                     </tr>
                     <tr>
                       <td>Dryer</td>
-                      <td class="text-right">5,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">5,000&nbsp;VA</td>
                       <td class="text-center">×</td>
                       <td class="text-center">12</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">60,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">60,000&nbsp;VA</td>
                     </tr>
-                    <tr style="border-top: 2px solid black;">
-                      <td colspan="5">Total Load</td>
+                    <tr class="last">
+                      <td colspan="4">Total Load</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">264,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">264,000&nbsp;VA</td>
                     </tr>
                   </tbody>
                 </table>
@@ -185,32 +178,27 @@
                     <tr>
                       <td class="text-left">General Lighting</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">59,040</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">59,040&nbsp;VA</td>
                     </tr>
                     <tr>
                       <td class="text-left">Small Appliance</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">54,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">54,000&nbsp;VA</td>
                     </tr>
                     <tr>
                       <td class="text-left">Fixed Appliance</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">264,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">264,000&nbsp;VA</td>
                     </tr>
                     <tr>
                       <td class="text-left">Larger Heating or A/C</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">126,000</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">126,000&nbsp;VA</td>
                     </tr>
-                    <tr style="border-top: 2px solid black;">
+                    <tr class="last">
                       <td class="text-left">Total Load</td>
                       <td class="text-center">=</td>
-                      <td class="text-right">503,040</td>
-                      <td class="text-center">VA</td>
+                      <td class="text-right">503,040&nbsp;VA</td>
                     </tr>
                   </tbody>
                 </table>
